fix(truncated-button): missing color

--- a/src/breadcrumbs.scss
+++ b/src/breadcrumbs.scss
@@ -55,6 +55,7 @@ $valid-overflow-behaviors: ("wrap", "ellipsis");
       margin: 0;
       cursor: pointer;
       line-height: 1;
+      color: var(--color-truncated-button, var(--color-link-breadcrumbs));
     }
   }
 
